--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -62,8 +62,685 @@ $on-laptop:        800px;
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+//@import
+//        "base",
+//        "layout",
+//        "syntax-highlighting"
+//;
+
+/**
+ * Reset some basic elements
+ */
+body, h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, hr,
+dl, dd, ol, ul, figure {
+    margin: 0;
+    padding: 0;
+}
+
+
+
+/**
+ * Basic styling
+ */
+body {
+    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    color: $text-color;
+    background-color: $background-color;
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-feature-settings: "kern" 1;
+    -moz-font-feature-settings: "kern" 1;
+    -o-font-feature-settings: "kern" 1;
+    font-feature-settings: "kern" 1;
+    font-kerning: normal;
+}
+
+
+
+/**
+ * Set `margin-bottom` to maintain vertical rhythm
+ */
+h1, h2, h3, h4, h5, h6,
+p, blockquote, pre,
+ul, ol, dl, figure,
+%vertical-rhythm {
+    margin-bottom: $spacing-unit / 2;
+}
+
+
+
+/**
+ * Articles
+ */
+article {
+    background: #faf9f5;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05);
+    margin-bottom: $spacing-unit;
+    padding: 3em 3em 1em;
+
+    @include media-query($on-palm) {
+        padding: 1em 1em 0.3em;
+    }
+
+    > .entry-content {
+        @include media-query($on-palm) {
+            font-size: 80%;
+        }
+
+        &:first-letter {
+            color: #b7b1a9;
+            display: inline-block;
+            float: left;
+            font-family: "Playfair Display";
+            font-size: 121px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 70px;
+            margin: 6px 10px 0 -5px;
+
+            @include media-query($on-palm) {
+                font-size: 70px;
+                line-height: 30px;
+            }
+        }
+
+        &:first-line {
+            color: #787065;
+            font-family: "Playfair Display SC";
+            font-size: 1em;
+            font-style: normal !important;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+    }
+}
+
+.post-header {
+    border-bottom: 1px solid #d9d6d0;
+    margin-bottom: 2rem;
+    text-align: center;
+
+    &:before {
+        background: #faf9f5;
+        border: 1px solid #d9d6d0;
+        border-radius: 50%;
+        box-shadow: 0 0 0 4px #faf9f5;
+        color: #a09a92;
+        content: "p";
+        display: inline-block;
+        font-family: libretto-icons;
+        font-size: 21px;
+        line-height: 21px;
+        margin: 1rem auto 2rem;
+        padding: 10px;
+        text-shadow: none;
+    }
+
+    > div {
+        color: $grey-color;
+        font-size: $base-font-size;
+        font-style: italic;
+
+        @include media-query($on-palm) {
+            font-size: $small-font-size;
+        }
+
+        &:before {
+            color: #d9d6d0;
+            content: "~";
+            display: inline-block;
+            font-family: libretto-icons;
+            font-size: 24px;
+            margin: 0 0.25rem;
+            text-shadow: none;
+            vertical-align: -6px;
+        }
+
+        &:after {
+            color: #d9d6d0;
+            content: "`";
+            display: inline-block;
+            font-family: libretto-icons;
+            font-size: 24px;
+            margin: 0 0.25rem;
+            text-shadow: none;
+            vertical-align: -6px;
+        }
+    }
+}
+
+.post-list {
+    .post-header {
+        &:before {
+            background: #eae9e6;
+            border-color: #faf9f5;
+            box-shadow: 0 0 0 4px #eae9e6;
+        }
+    }
+}
+
+
+
+/**
+ * Images
+ */
+img {
+    max-width: 100%;
+    vertical-align: middle;
+}
+
+
+
+/**
+ * Figures
+ */
+figure {
+    background: #fff;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.025);
+    padding: 0.5em;
+}
+
+figure > img {
+    display: block;
+}
+
+figcaption {
+    color: $grey-color;
+    font-size: 16px;
+    font-style: italic;
+    line-height: 1.2;
+    margin: 1em 0.5em 0.5em;
+    text-align: center;
+}
+
+
+
+/**
+ * Lists
+ */
+ul, ol {
+    margin-left: $spacing-unit;
+}
+
+li {
+    > ul,
+    > ol {
+         margin-bottom: 0;
+    }
+}
+
+
+
+/**
+ * Headings
+ */
+h1, h2, h3, h4, h5, h6 {
+    line-height: initial;
+    font-weight: $base-font-weight;
+}
+
+
+
+/**
+ * Links
+ */
+a {
+    color: $brand-color;
+    text-decoration: none;
+
+    &:hover {
+        color: darken($brand-color, 5%);
+        text-decoration: none;
+    }
+}
+
+
+
+/**
+ * Blockquotes
+ */
+blockquote {
+    color: $grey-color;
+    border-left: 4px solid $grey-color-light;
+    padding-left: $spacing-unit / 2;
+    font-size: 18px;
+    letter-spacing: -1px;
+    font-style: italic;
+
+    > :last-child {
+        margin-bottom: 0;
+    }
+}
+
+
+
+/**
+ * Code formatting
+ */
+pre,
+code {
+    font-size: 15px;
+    border: 1px solid $grey-color-light;
+    border-radius: 3px;
+    background-color: #eef;
+}
+
+code {
+    padding: 1px 5px;
+}
+
+pre {
+    padding: 8px 12px;
+    overflow-x: auto;
+
+    > code {
+        border: 0;
+        padding-right: 0;
+        padding-left: 0;
+    }
+}
+
+
+
+/**
+ * Wrapper
+ */
+.wrapper {
+    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
+    @extend %clearfix;
+
+    @include media-query($on-laptop) {
+        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+        padding-right: $spacing-unit / 2;
+        padding-left: $spacing-unit / 2;
+    }
+}
+
+
+
+/**
+ * Clearfix
+ */
+%clearfix {
+
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
+
+
+
+/**
+ * Icons
+ */
+.icon {
+
+    > svg {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
+
+        path {
+            fill: $grey-color;
+        }
+    }
+}
+
+/**
+ * Site header
+ */
+.site-header {
+    background: #faf9f5;
+    border-top: 5px solid $title-color;
+    border-bottom: 1px solid $grey-color-light;
+    min-height: 56px;
+    text-align: center;
+
+    // Positioning context for the mobile navigation icon
+    position: relative;
+}
+
+.site-title {
+    font-family: "Playfair Display";
+    font-size: 32px;
+    font-weight: 300;
+    line-height: 56px;
+    margin-bottom: 0;
+
+    &,
+    &:visited {
+        color: $title-color;
+    }
+}
+
+
+
+/**
+ * Site footer
+ */
+.site-footer {
+    border-top: 1px solid $grey-color-light;
+    padding: $spacing-unit 0;
+}
+
+.footer-heading {
+    font-size: 18px;
+    margin-bottom: $spacing-unit / 2;
+}
+
+.contact-list,
+.social-media-list {
+    list-style: none;
+    margin-left: 0;
+
+    .username {
+        font-size: 80%;
+    }
+}
+
+.footer-col-wrapper {
+    font-size: 15px;
+    color: $grey-color;
+    margin-left: -$spacing-unit / 2;
+    @extend %clearfix;
+}
+
+.footer-col {
+    float: left;
+    margin-bottom: $spacing-unit / 2;
+    padding-left: $spacing-unit / 2;
+}
+
+.footer-col-1 {
+    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
+    width:         calc(35% - (#{$spacing-unit} / 2));
+}
+
+.footer-col-2 {
+    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
+    width:         calc(20% - (#{$spacing-unit} / 2));
+}
+
+.footer-col-3 {
+    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
+    width:         calc(45% - (#{$spacing-unit} / 2));
+}
+
+@include media-query($on-laptop) {
+    .footer-col-1,
+    .footer-col-2 {
+        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+        width:         calc(50% - (#{$spacing-unit} / 2));
+    }
+
+    .footer-col-3 {
+        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+        width:         calc(100% - (#{$spacing-unit} / 2));
+    }
+}
+
+@include media-query($on-palm) {
+    .footer-col {
+        float: none;
+        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+        width:         calc(100% - (#{$spacing-unit} / 2));
+    }
+}
+
+
+
+/**
+ * Page content
+ */
+.page-content {
+    padding: $spacing-unit 0;
+}
+
+.page-heading {
+    font-size: 20px;
+}
+
+.post-list {
+    margin-left: 0;
+    list-style: none;
+}
+
+.post-meta {
+    color: $brand-color;
+}
+
+.post-link {
+    display: block;
+    font-family: "Playfair Display";
+    font-size: 44px;
+
+    @include media-query($on-palm) {
+        font-size: 1.1em;
+    }
+}
+
+
+
+/**
+ * Posts
+ */
+.post-header {
+    margin-bottom: $spacing-unit;
+}
+
+.post-title {
+    color: $grey-color;
+    font-family: "Playfair Display";
+    font-size: 42px;
+    letter-spacing: -1px;
+    line-height: 1;
+
+    @include media-query($on-laptop) {
+        font-size: 36px;
+    }
+}
+
+.post-content {
+    margin-bottom: $spacing-unit;
+
+    h2 {
+        font-size: 32px;
+
+        @include media-query($on-laptop) {
+            font-size: 28px;
+        }
+    }
+
+    h3 {
+        font-size: 26px;
+
+        @include media-query($on-laptop) {
+            font-size: 22px;
+        }
+    }
+
+    h4 {
+        font-size: 20px;
+
+        @include media-query($on-laptop) {
+            font-size: 18px;
+        }
+    }
+}
+
+#post-nav {
+    display: block;
+    padding: 0 2em;
+
+    .next,
+    .previous {
+        float: left;
+        margin: 1rem 0;
+        width: 50%;
+
+        span:after,
+        span:before {
+            border: solid transparent 4px;
+            content: "";
+            display: inline-block;
+            height: 0;
+            margin: 0 0.5rem;
+            top: 0.8em;
+            width: 0;
+        }
+    }
+
+    .next {
+        span:before {
+            border-left: 0;
+            border-right-color: $grey-color;
+        }
+    }
+
+    .previous {
+        text-align: right;
+
+        span:after {
+            border-left-color: $grey-color;
+            border-right: 0;
+        }
+    }
+
+    @include media-query($on-palm) {
+        padding: initial;
+
+        .next,
+        .previous {
+            text-align: center;
+            width: 100%;
+        }
+    }
+
+    span {
+        color: $brand-color;
+        display: block;
+        font-family: Montserrat;
+        font-size: 0.75rem;
+        font-style: normal;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+    }
+
+    a {
+        color: $grey-color;
+        font-style: italic;
+    }
+}
+
+
+
+/**
+ * Table of Contents
+ */
+.table-of-contents {
+    h1 {
+        color: $brand-color;
+        display: block;
+        font-family: "Playfair Display";
+        font-size: 44px;
+        text-align: center;
+
+        @include media-query($on-laptop) {
+            font-size: 36px;
+        }
+    }
+
+    span {
+        color: $grey-color;
+    }
+}
+
+
+
+/**
+ * Error pages
+ */
+.error {
+    text-align: center;
+}
+
+/**
+ * Syntax highlighting styles
+ */
+.highlight {
+    background: #fff;
+    @extend %vertical-rhythm;
+
+    .highlighter-rouge & {
+      background: #eef;
+    }
+
+    .c     { color: #998; font-style: italic } // Comment
+    .err   { color: #a61717; background-color: #e3d2d2 } // Error
+    .k     { font-weight: bold } // Keyword
+    .o     { font-weight: bold } // Operator
+    .cm    { color: #998; font-style: italic } // Comment.Multiline
+    .cp    { color: #999; font-weight: bold } // Comment.Preproc
+    .c1    { color: #998; font-style: italic } // Comment.Single
+    .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
+    .gd    { color: #000; background-color: #fdd } // Generic.Deleted
+    .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
+    .ge    { font-style: italic } // Generic.Emph
+    .gr    { color: #a00 } // Generic.Error
+    .gh    { color: #999 } // Generic.Heading
+    .gi    { color: #000; background-color: #dfd } // Generic.Inserted
+    .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
+    .go    { color: #888 } // Generic.Output
+    .gp    { color: #555 } // Generic.Prompt
+    .gs    { font-weight: bold } // Generic.Strong
+    .gu    { color: #aaa } // Generic.Subheading
+    .gt    { color: #a00 } // Generic.Traceback
+    .kc    { font-weight: bold } // Keyword.Constant
+    .kd    { font-weight: bold } // Keyword.Declaration
+    .kp    { font-weight: bold } // Keyword.Pseudo
+    .kr    { font-weight: bold } // Keyword.Reserved
+    .kt    { color: #458; font-weight: bold } // Keyword.Type
+    .m     { color: #099 } // Literal.Number
+    .s     { color: #d14 } // Literal.String
+    .na    { color: #008080 } // Name.Attribute
+    .nb    { color: #0086B3 } // Name.Builtin
+    .nc    { color: #458; font-weight: bold } // Name.Class
+    .no    { color: #008080 } // Name.Constant
+    .ni    { color: #800080 } // Name.Entity
+    .ne    { color: #900; font-weight: bold } // Name.Exception
+    .nf    { color: #900; font-weight: bold } // Name.Function
+    .nn    { color: #555 } // Name.Namespace
+    .nt    { color: #000080 } // Name.Tag
+    .nv    { color: #008080 } // Name.Variable
+    .ow    { font-weight: bold } // Operator.Word
+    .w     { color: #bbb } // Text.Whitespace
+    .mf    { color: #099 } // Literal.Number.Float
+    .mh    { color: #099 } // Literal.Number.Hex
+    .mi    { color: #099 } // Literal.Number.Integer
+    .mo    { color: #099 } // Literal.Number.Oct
+    .sb    { color: #d14 } // Literal.String.Backtick
+    .sc    { color: #d14 } // Literal.String.Char
+    .sd    { color: #d14 } // Literal.String.Doc
+    .s2    { color: #d14 } // Literal.String.Double
+    .se    { color: #d14 } // Literal.String.Escape
+    .sh    { color: #d14 } // Literal.String.Heredoc
+    .si    { color: #d14 } // Literal.String.Interpol
+    .sx    { color: #d14 } // Literal.String.Other
+    .sr    { color: #009926 } // Literal.String.Regex
+    .s1    { color: #d14 } // Literal.String.Single
+    .ss    { color: #990073 } // Literal.String.Symbol
+    .bp    { color: #999 } // Name.Builtin.Pseudo
+    .vc    { color: #008080 } // Name.Variable.Class
+    .vg    { color: #008080 } // Name.Variable.Global
+    .vi    { color: #008080 } // Name.Variable.Instance
+    .il    { color: #099 } // Literal.Number.Integer.Long
+}
